修复release模式下不能训练大数据的BUG

--- a/msvc/Demo_Mushroom/Demo_Mushroom.vcxproj
+++ b/msvc/Demo_Mushroom/Demo_Mushroom.vcxproj
@@ -145,6 +145,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalDependencies>EasyCNN.lib</AdditionalDependencies>
+      <LargeAddressAware>true</LargeAddressAware>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
